# looper

./: .gitignore  CMakeLists.txt  README.md  move_vst3_to_mac_os_plugins_dir.sh
CMake/: README.md
Modules/: README.md
Plugin/: CMakeLists.txt
Plugin/Looper/: CMakeLists.txt
Plugin/Looper/Source/: AudioMemory.cpp  AudioMemory.h  LooperProcessor.cpp  LooperProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StateChangeListener.h  states.h
